added file endpoint and make more restfull
